# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]
- Require Minecraft 1.20.1-1.20.4 and Forge.

### Changed
- Compatible with 1.20.2-1.20.4 except for data generators.

## [1.2.0]
- Require Minecraft 1.20.1 and Forge 47.2.0+.

### Added
- Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
- Pasta olio e peperoncino.
- Gun upgrade system and upgrade items.
  - To upgrade a gun, hold the gun in the off-hand and use (right-click) the upgrade item held in the main hand.

### Changed
- Increase composting chance of half-sized chili potato sandwich.

### Removed
- Smithing table recipe for gun with bayonet.

## [1.1.0]
- Require Minecraft 1.20.1 and Forge 47.2.0+.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2]
- Require Minecraft 1.20.1 and Forge 47.2.0+.

### Changed
- Change mod icon.

### Fixed
- Fix ammo consumption when loading machine gun.

## [1.0.1]
- Backport to 1.20.1 Forge.
- Require Minecraft 1.20.1 and Forge 47.2.0+.