@@ -1,2 +1,2 @@
-// 1.20.1	2024-03-17T14:49:00.5622716	Languages: en_us
-32ec761277baf6c875b3925063c3e21b0390f37c assets/chilibulletweapons/lang/en_us.json
+// 1.20.1	2024-03-17T23:35:15.849706	Languages: en_us
+64af92a6d74c04297135caa1db5b9e080427fe92 assets/chilibulletweapons/lang/en_us.json
